hphp/hack/test/ifc/check/calls_static.php.exp
=== IFC analysis results for calls_static.php
File "calls_static.php", line 12, characters 5-29:
Data with policy `PRIVATE` appears in context `PUBLIC`. (Typing[4379])
  File "calls_static.php", line 8, characters 16-23:
  This may be the data source with policy `PRIVATE`
  File "calls_static.php", line 6, characters 16-22:
  This may be the data sink with policy `PUBLIC`
File "calls_static.php", line 19, characters 3-81:
Data with policy `PRIVATE` appears in context `PUBLIC`. (Typing[4379])
  File "calls_static.php", line 8, characters 16-23:
  This may be the data source with policy `PRIVATE`
  File "calls_static.php", line 6, characters 16-22:
  This may be the data sink with policy `PUBLIC`
  File "calls_static.php", line 12, characters 5-29:
  Another program point contributing to the illegal flow
File "calls_static.php", line 15, characters 3-80:
Data with policy `PRIVATE` appears in context `PUBLIC`. (Typing[4379])
  File "calls_static.php", line 8, characters 16-23:
  This may be the data source with policy `PRIVATE`
  File "calls_static.php", line 6, characters 16-22:
  This may be the data sink with policy `PUBLIC`
  File "calls_static.php", line 12, characters 5-29:
  Another program point contributing to the illegal flow
File "calls_static.php", line 35, characters 3-84:
Data with policy `PRIVATE` appears in context `PUBLIC`. (Typing[4379])
  File "calls_static.php", line 8, characters 16-23:
  This may be the data source with policy `PRIVATE`
  File "calls_static.php", line 6, characters 16-22:
  This may be the data sink with policy `PUBLIC`
  File "calls_static.php", line 12, characters 5-29:
  Another program point contributing to the illegal flow
